Implemented Base Modal

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
+    <!-- Root Content -->
     <div id="root"></div>
+    <!-- Modal Content -->
+    <div id="modal-root"></div>
 </body>
 
 </html>
