Added Favorite as Default Site and Metadata Tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="title" content="COVID Dashboard">
+    <meta name="description" content="A bite-size analytics platform for tracking COVID related data including cases, deaths, and vaccines.">
+    <meta name="keywords" content="covid, covid dashboard, covid analytics, covid cases, covid deaths, vaccines by country, covid vaccines by country">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
     <title>COVID Dashboard</title>
 </head>
 
