Added Stability Improvements

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="https://www.realsimplecovid.com/favicon.ico?v=2" />
     <meta name="title" content="COVID Dashboard">
     <meta name="description" content="A bite-size analytics platform for tracking COVID related data including cases, deaths, and vaccines.">
     <meta name="keywords" content="covid, covid dashboard, covid analytics, covid cases, covid deaths, vaccines by country, covid vaccines by country">
