--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="https://www.realsimplecovid.com/favicon.ico?v=2" />
-    <meta name="title" content="COVID Dashboard">
+    
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="COVID-19 Dashboard">
     <meta name="description" content="A bite-size analytics platform for tracking COVID related data including cases, deaths, and vaccines.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="COVID-19 Dashboard">
+    <meta property="og:description" content="A bite-size analytics platform for tracking COVID related data including cases, deaths, and vaccines.">
+    <meta property="og:image" content="https://www.realsimplecovid.com/static/png/meta_image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="COVID-19 Dashboard">
+    <meta property="twitter:description" content="A bite-size analytics platform for tracking COVID related data including cases, deaths, and vaccines.">
+    <meta property="twitter:image" content="https://www.realsimplecovid.com/static/png/meta_image.png">
+
     <meta name="keywords" content="covid, covid dashboard, covid analytics, covid cases, covid deaths, vaccines by country, covid vaccines by country">
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
